--- a/cpu-audio.html
+++ b/cpu-audio.html
@@ -1211,7 +1211,7 @@ class CpuControllerElement extends HTMLElement {
 		if (this.tagName === CPU_Audio.selector_container.toUpperCase()) {
 			if (this.querySelector('audio[controls]') === null) {
 				// Graceful degradation : do not start if no media element OR no native controls
-				console.error(`Tag <${CPU_Audio.selector_container}> without <audio controls>`);
+				console.warn(`Tag <${CPU_Audio.selector_container}> without <audio controls>`);
 				this.remove();
 				return;
 			}
