--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <div>
 	<cpu-audio 
-		data-title="Ex0085 Le Mystère Enigma"
-		data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1805-Ex0085-Enigma_m.jpg"
-		data-canonical="https://cpu.dascritch.net/post/2018/05/17/Ex0085-Histoires-de-la-cryptographie%2C-2%C3%A8me-partie-%3A-Le-myst%C3%A8re-d-Enigma"
-		data-twitter="@cpuprogramme">
+		title="Ex0085 Le Mystère Enigma"
+		poster="https://cpu.dascritch.net/public/Images/Emissions/.1805-Ex0085-Enigma_m.jpg"
+		canonical="https://cpu.dascritch.net/post/2018/05/17/Ex0085-Histoires-de-la-cryptographie%2C-2%C3%A8me-partie-%3A-Le-myst%C3%A8re-d-Enigma"
+		twitter="@cpuprogramme">
 		<!-- Pour des raisons  de compatibilité arrière, il *faut* garder la balise <audio controls> dans la déclaration. -->
 		<audio controls id="emission">
 			<source src="https://dascritch.net/vrac/Emissions/CPU/0085-CPU%2817-05-18%29.ogg" type="audio/ogg">
@@ -72,10 +72,10 @@
 <div>
 	Aspect changes at 640px and 320px wide; We are waiting @element implementation to complete this.
 	<cpu-audio 
-		data-title="Au carnaval avec Samba Résille (2003)"
-		data-poster="https://dascritch.net/vrac/.blog2/entendu/.1404-SambaResille_m.jpg"
-		data-canonical="https://dascritch.net/post/2014/04/08/Au-Carnaval-avec-Samba-R%C3%A9sille"
-		data-twitter="@dascritch"
+		title="Au carnaval avec Samba Résille (2003)"
+		poster="https://dascritch.net/vrac/.blog2/entendu/.1404-SambaResille_m.jpg"
+		canonical="https://dascritch.net/post/2014/04/08/Au-Carnaval-avec-Samba-R%C3%A9sille"
+		twitter="@dascritch"
 		>
 	  	<!-- Pour des raisons  de compatibilité arrière, il faut garder la balise audio dans la déclaration. -->
 		<audio controls id="live">
@@ -97,7 +97,7 @@
 <div>
 	↓ No media tag. The component must not start
 
-	<cpu-audio data-title="This player must crash">
+	<cpu-audio title="This player must crash">
 	</cpu-audio>
 </div>
 
@@ -116,7 +116,7 @@
 <div>
 	↓ Bad media call. Alas, Chrome won't crash it until any interaction, Firefox never display any error.
 
-	<cpu-audio data-title="This player must crash" data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1804-Ex0080-Pizza_m.jpg" data-canonical="https://dascritch.net/">
+	<cpu-audio title="This player must crash" poster="https://cpu.dascritch.net/public/Images/Emissions/.1804-Ex0080-Pizza_m.jpg" canonical="https://dascritch.net/">
 		<!-- pour des raisons  de compatibilité arrière, il faut garder la balise audio dans la déclaration -->
 		<audio controls id="oups">
 			<source src="https://cpu.dascritch.net/public/Images/Emissions/.1804-Ex0080-Pizza_m.jpg"  type="audio/mpeg" />
