minor corrections on presentation page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 <div>
 	<p>See <a href="https://github.com/dascritch/cpu-audio">README.md on this project's github</a></p>
 
+</div>
+
+
+<h3 id="hashlinks">Link moments in audio into html pages</h3>
+
+<div>
 	<cpu-audio 
 		title="Ex0085 Le Mystère Enigma"
 		poster="https://cpu.dascritch.net/public/Images/Emissions/.1805-Ex0085-Enigma_m.jpg"
@@ -29,8 +35,6 @@
 			<source src="https://dascritch.net/vrac/Emissions/CPU/podcast/0085-CPU%2817-05-18%29.mp3" type="audio/mpeg">
 		</audio>
 	</cpu-audio>
-
-	<h3 id="hashlinks">Link moments in audio into html pages</h3>
 
 	Chapters (click on timecodes) :
 	<ol>
@@ -95,7 +99,7 @@
 	</cpu-audio>
 </div>
 
-<div style="width:600px;margin :0 auto;">
+<div style="max-width:600px;margin :0 auto;">
 	We are waiting @element implementation to complete this. The parent element is width-constraigned, so the webcomponent
 	<cpu-audio 
 		title="Montage worst of SWE 2009"
